# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  arealight.h  boundingsphere.h  common.h  cube.h  light.h  main.cpp  object.h  plane.h  raytrace.h  raytrace2.h  sphere.h  triangle.h
